--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Android CI
 
 on:
   push:
-    branches: ["ci/cd", "master"]
+    branches: ["ci/cd", "main"]
   pull_request:
-    branches: ["ci/cd", "master"]
+    branches: ["ci/cd", "main"]
 
 jobs:
   build:
